Get user favorites takes num_posts and offset
